change action name

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'LaTeX to PDF'
-description: 'Compile CV in LaTeX'
+name: 'latex2pdf'
+description: 'Convert LaTeX file into PDF file.'
 inputs:
   output_dir:
     description: "Output directory to store the pdf file."
