rename default branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,12 +3,12 @@ name: LateX CV to PDF
 on:
   push:
     branches: 
-      - main
+      - master
       - develop
     tags:
        - '*'
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build_latex:
