--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,9 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
-      - name: Compile LaTeX document
-        id: compile-latex-document
+
+      - name: Compile test LaTeX document with Maths
+        id: compile-latex-document-with-math
         uses: ./
         with:
           output_dir: output
@@ -29,3 +30,17 @@ jobs:
         with:
           name: output
           path: output/test.pdf
+      
+      - name: Compile LaTeX document with fontawesome
+        id: compile-latex-document-with-fontawesome
+        uses: ./
+        with:
+          output_dir: output
+          main_latex_file: test-fontawesome.tex
+          ctan_packages: moderncv colortbl fontawesome
+      - name: Upload PDF to the workflow tab
+        id: upload-workflow-tab
+        uses: actions/upload-artifact@v2
+        with:
+          name: output-fontawesome
+          path: output/test-fontawesome.pdf
