Update documentation to reflect current repository state
CLAUDE.md: rewrite for Ubuntu 24.04, add missing files to structure,
fix CI description (sequential steps not parallel jobs), document
set -e behavior and variable quoting conventions, add pre-commit
and External LLMs sections.

CONTRIBUTING.md: update Python version to 3.9+, fix Docker run
example to match current CI packages and volume mounts.

CHANGELOG.md: rename [1.0.5] section to [1.1.0] to match actual
tag, fix comparison links (remove v prefix), add Unreleased notes
for current changes.

.dockerignore: remove stale test.tex entry, add CLAUDE.md, LICENSE,
and .pre-commit-config.yaml.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,12 @@
 README.md
 CONTRIBUTING.md
 CHANGELOG.md
+CLAUDE.md
+LICENSE
 action.yml
-test.tex
 .github
 .git
 .gitignore
+.pre-commit-config.yaml
 resources/README.md
 output
